# tabularbert_z

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  downstream_test.py  eval_finetune_baseline.py  example.py  extract_cls_z.py  extract_z.py  pyproject.toml  requirements.txt  roc.py  setup.py  x_vs_z_sgb_dedup.py  x_vs_z_xgb.py
datasets/: GE.csv  hitcall.csv
eval_finetuned/: pr_curve.csv  roc_curve.csv  summary.csv
eval_x_vs_z/: summary_20250916_152131.csv  summary_20250916_152131.xlsx  summary_20250916_155722.xlsx
fine-tuning/version0/: config.json
model/: BERT.py  GMTMLM.py  TabularBERT.py  __init__.py  embedding.py  mlp.py  tabular_bert.py  transformer.py
preprocessing/: preprocessing_quantile.pkl
pretraining/version0/: config.json
pretraining/version0/log/: events.out.tfevents.1752571155.stat03.417639.0
pretraining/version1/log/: events.out.tfevents.1752573416.stat03.428521.0
pretraining/version2/log/: events.out.tfevents.1752575810.stat03.435329.0
tabularbert/: __init__.py
tabularbert/model/: bert.py  embedding.py  mlp.py  tabular_bert.py
tabularbert/optimizer/: padamw.py
tabularbert/utils/: __init__.py  criterion.py  data.py  metrics.py  regularizer.py  scheduler.py  type.py  utils.py
utils/: __init__.py  criterion.py  data.py  metrics.py  regularizer.py  utils.py
z_out/: y_te.npy  y_tr.npy  y_va.npy
