[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tabularbert"
version = "0.1.0"
description = "A comprehensive framework for tabular data modeling using BERT-based transformers"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Beomjin Park", email = "bbeomjin@gmail.com"}
]
maintainers = [
    {name = "Beomjin Park", email = "bbeomjin@gmail.com"}
]
keywords = ["tabular-data", "bert", "transformer", "machine-learning", "deep-learning", "self-supervised"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.60.0",
    "tensorboard>=2.7.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
]

[project.optional-dependencies]
wandb = ["wandb>=0.12.0"]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
    "isort>=5.9",
]
all = ["wandb>=0.12.0"]

[project.urls]
Homepage = "https://github.com/bbeomjin/TabularBERT"
Documentation = "https://tabularbert.readthedocs.io/"
Repository = "https://github.com/bbeomjin/TabularBERT"
"Bug Tracker" = "https://github.com/bbeomjin/TabularBERT/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["tabularbert*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
tabularbert = ["*.md", "*.txt"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["tabularbert"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=tabularbert --cov-report=term-missing --cov-report=html"
